[gd_scene load_steps=11 format=3 uid="uid://nfbytl8fngqm"]

[ext_resource type="Script" uid="uid://b1oify5gf7bfh" path="res://scripts/enemies/rampaging_pixeler.gd" id="1_1n0hp"]
[ext_resource type="Texture2D" uid="uid://t0px67wm2e6v" path="res://assets/sprites/enemies_tutorial.png" id="2_wpmif"]
[ext_resource type="AudioStream" uid="uid://bre8pxdjj6vjc" path="res://assets/sounds/power_up.wav" id="3_gjsv7"]
[ext_resource type="PackedScene" uid="uid://c2t37yu8gywy3" path="res://scenes/events/killzone.tscn" id="4_1g534"]
[ext_resource type="PackedScene" uid="uid://c1q3ty6hji11a" path="res://scenes/particles/slash_explosion_pixeler.tscn" id="5_2xevk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1n0hp"]
atlas = ExtResource("2_wpmif")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpmif"]
atlas = ExtResource("2_wpmif")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1gb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n0hp")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpmif")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvxqa"]
size = Vector2(15, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xd8n"]
size = Vector2(11, 24)

[node name="rampaging_pixeler" type="Area2D" groups=["kamehameha", "sword"]]
collision_layer = 32
collision_mask = 32
script = ExtResource("1_1n0hp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l1gb7")
animation = &"move"
autoplay = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_jvxqa")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gjsv7")

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -11)
collision_mask = 256

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)
collision_mask = 256

[node name="killzone" parent="." instance=ExtResource("4_1g534")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_7xd8n")

[node name="slash_explosion_pixeler" parent="." instance=ExtResource("5_2xevk")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
